cluster/apps/kyverno/kyverno/policies/ingress-auth-annotations.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.minuette.horse/kyverno.io/clusterpolicy_v1.json
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-auth-annotations
  annotations:
    policies.kyverno.io/title: Apply Ingress Auth annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates auth annotations on ingresses.
      When `auth.home.arpa` is `true`, the annotations for
      Authentik are added.
spec:
  generateExistingOnPolicyUpdate: true
  rules:
    - name: auth
      match:
        any:
          - resources:
              kinds: [Ingress]
              annotations:
                auth.home.arpa/enabled: 'true'
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(nginx.ingress.kubernetes.io/auth-response-headers): Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
              +(nginx.ingress.kubernetes.io/auth-signin): https://authentik.${SECRET_DOMAIN}/outpost.goauthentik.io/start?rd=$escaped_request_uri
              +(nginx.ingress.kubernetes.io/auth-snippet): proxy_set_header X-Forwarded-Host $http_host;
              +(nginx.ingress.kubernetes.io/auth-url): http://authentik-server.default.svc.cluster.local/outpost.goauthentik.io/auth/nginx
