cluster/apps/kyverno/kyverno/policies/ingress-external-dns-annotations.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.minuette.horse/kyverno.io/clusterpolicy_v1.json
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-external-dns-annotations
  annotations:
    policies.kyverno.io/title: Apply Ingress External-DNS Annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates external-dns annotations on ingresses.
      To be externally accessible, all ingresses need to be linked to the
      cloudflared tunnel. This policy makes sure the annotation is added.
spec:
  generateExistingOnPolicyUpdate: true
  rules:
    - name: external-dns
      match:
        any:
          - resources:
              kinds: [Ingress]
              annotations:
                external-dns.home.arpa/enabled: 'true'
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): |-
                k8s-tunnel.${SECRET_ROOT_DOMAIN}
